# Elox_EDM_Controller

./: README.md
ELOX_EDM_Controller/: .clangd  .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  ELOX_EDM_Controller Debug.launch  ELOX_EDM_Controller.ioc  ELOX_EDM_Controller.launch  ELOX_EDM_Controller.txt  HY101CTP_STM32H743.ioc  README.vscode.md  STM32H743IITX_FLASH.ld  STM32H743IITX_RAM.ld  STM32H743XX_FLASH.ld  backup_ELOX_EDM_Controller.ioc  newlib_lock_glue.c  objdump.txt  stm32_lock.h
ELOX_EDM_Controller/Core/Inc/: BSP_RGB_LCD.h  BSP_SDRAM.h  RTE_Components.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
ELOX_EDM_Controller/Core/Inc/Backup/: BSP_RGB_LCD.h.bak  BSP_SDRAM.h.bak  RTE_Components.h.bak  main.h.bak  sharedvars.h.bak  stm32h7xx_hal_conf.h.bak  stm32h7xx_it.h.bak
ELOX_EDM_Controller/Core/Src/: BSP_RGB_LCD.c  BSP_SDRAM.c  dma2d.c  fmc.c  gpio.c  ltdc.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  system_stm32h7xx.c  tim.c
ELOX_EDM_Controller/Core/Src/Backup/: BSP_RGB_LCD.c.bak  BSP_SDRAM.c.bak  fmc.c.bak  gpio.c.bak  ltdc.c.bak  main.c.bak  stm32h7xx_hal_msp.c.bak  stm32h7xx_it.c.bak  syscalls.c.bak  system_stm32h7xx.c.bak  tim.c.bak  usart.c.bak
ELOX_EDM_Controller/Core/User/Config/: DEV_Config.c  DEV_Config.h
ELOX_EDM_Controller/Core/User/FT5X06/: Analog_I2C_FT5X06.c  Analog_I2C_FT5X06.h  ft5x06.c  ft5x06.h
ELOX_EDM_Controller/Core/User/GT911/: Analog_I2C.c  Analog_I2C.h  GT911.c  GT911.h
ELOX_EDM_Controller/Debug/: ELOX_EDM_Controller.map  makefile  objects.list
ELOX_EDM_Controller/Debug/Core/Src/: BSP_RGB_LCD.cyclo  BSP_RGB_LCD.su  BSP_SDRAM.cyclo  BSP_SDRAM.su  fmc.cyclo  fmc.su  gpio.d  ltdc.su  main.cyclo  main.d  main.su  stm32h7xx_hal_msp.d  stm32h7xx_it.d  stm32h7xx_it.su  subdir.mk  syscalls.cyclo  syscalls.d  syscalls.su  system_stm32h7xx.cyclo  system_stm32h7xx.su  tim.cyclo  tim.d  tim.su
ELOX_EDM_Controller/Debug/Core/Startup/: subdir.mk
ELOX_EDM_Controller/Debug/Core/ThreadSafe/: newlib_lock_glue.cyclo  newlib_lock_glue.su  subdir.mk
ELOX_EDM_Controller/Debug/TouchGFX/App/: subdir.mk
ELOX_EDM_Controller/Debug/TouchGFX/simulator/: subdir.mk
ELOX_EDM_Controller/Release/: ELOX_EDM_Controller.list  ELOX_EDM_Controller.map  objects.list  objects.mk  sources.mk
ELOX_EDM_Controller/TouchGFX/: ApplicationTemplate.touchgfx.part  ELOX_EDM_Controller.touchgfx  ELOX_EDM_Controller_backup.touchgfx  application.config  target.config
ELOX_EDM_Controller/TouchGFX/App/: app_touchgfx.c  app_touchgfx.h
ELOX_EDM_Controller/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake  toolchain-arm-none-eabi.cmake
ELOX_EDM_Controller/cmake/stm32cubemx/: CMakeLists.txt
ELOX_EDM_Controller/cmake/touchgfx/: CMakeLists.txt
ELOX_EDM_Controller/docs/: capacitance_touch_parameter.c  servo_relay_test_matrix.md
(+588 files in other folders)
